ticketing/infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1

  # Tell k8s how to find the pods that this deployments is in charge of
  selector:
    matchLabels:
      app: auth

  # Set the template on how the pods will be created by this deployment
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: david184/auth
          env: # Set environment variables to be accesed inside the container
            - name: JWT_KEY # Name to reference the variable inside the container
              valueFrom: # Get the value of the variable
                secretKeyRef: 
                  name: jwt-secret # This is the same name we put in the command, else we get CreateContainerConfigError

                  # As a secret can contain several key-value pairs, we specify 
                  # the key that we want to get the value from
                  key: JWT_KEY
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
# we dont specify a type of service beacuse we rely on the default
# wich is the ClusterIP service
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
