ticketing/infra/k8s/auth-mong-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo # official mongo image in dockerhub
---
apiVersion: v1
kind: Service
metadata: 
  name: auth-mongo-srv
spec:
  selector: 
    app: auth-mongo
  ports:
    - name: db # just for logging purposes, not that important
      protocol: TCP
      port: 27017 # standard port for mongo
      targetPort: 27017 # standard port for mongo
