ticketing/infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1

  # Tell k8s how to find the pods that this deployments is in charge of
  selector:
    matchLabels:
      app: tickets

  # Set the template on how the pods will be created by this deployment
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: david184/tickets
          env: # Set environment variables to be accesed inside the container
            - name: MONGO_URI
              value: 'mongodb://tickets-mongo-srv:27017/tickets'
            - name: JWT_KEY # Name to reference the variable inside the container
              valueFrom: # Get the value of the variable
                secretKeyRef: 
                  name: jwt-secret # This is the same name we put in the command, else we get CreateContainerConfigError

                  # As a secret can contain several key-value pairs, we specify 
                  # the key that we want to get the value from
                  key: JWT_KEY
---
apiVersion: v1
kind: Service
metadata:
# this will be the domain for the clusterIP service
# so other pods can reach the tickets service inside the cluster
  name: tickets-srv
spec:
# we dont specify a type of service beacuse we rely on the default
# wich is the ClusterIP service
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
